--- a/CupcakeWebshop/src/main/webapp/index.html
+++ b/CupcakeWebshop/src/main/webapp/index.html
@@ -3,8 +3,13 @@
     <head>
         <title>Start Page</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <style>
+            h1 {text-align: center}
+            h2 {text-align: center}
+        </style>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Cookie Clickers Bake Webshop</h1>
+        <h2>Plz login to order sweet, SWEET cupcakes.</h2>
     </body>
 </html>
