--- a/CupcakeWebshop/src/main/webapp/index.html
+++ b/CupcakeWebshop/src/main/webapp/index.html
@@ -11,5 +11,8 @@
     <body>
         <h1>Cookie Clickers Bake Webshop</h1>
         <h2>Plz login to order sweet, SWEET cupcakes.</h2>
+        <input type ="text" name ="username">
+        <input type ="password" name ="password">
+        <input type="submit" name="login" value="Login" formaction="/CupcakeWebshop">
     </body>
 </html>
