--- a/CupcakeWebshop/src/main/webapp/index.html
+++ b/CupcakeWebshop/src/main/webapp/index.html
@@ -13,6 +13,6 @@
         <h2>Plz login to order sweet, SWEET cupcakes.</h2>
         <input type ="text" name ="username">
         <input type ="password" name ="password">
-        <input type="submit" name="login" value="Login" formaction="/CupcakeWebshop">
+        <input type="submit" name="login" value="Login" formaction="http://localhost:8084/CupcakeWebshop/Login">
     </body>
 </html>
