--- a/CupcakeWebshop/src/main/webapp/index.html
+++ b/CupcakeWebshop/src/main/webapp/index.html
@@ -11,8 +11,10 @@
     <body>
         <h1>Cookie Clickers Bake Webshop</h1>
         <h2>Plz login to order sweet, SWEET cupcakes.</h2>
+        <form method="GET" action="http://localhost:8084/CupcakeWebshop/Login">
         <input type ="text" name ="username">
         <input type ="password" name ="password">
-        <input type="submit" name="login" value="Login" formaction="http://localhost:8084/CupcakeWebshop/Login">
+        <input type="submit" value="Login">
+        </form>
     </body>
 </html>
