--- a/CupcakeWebshop/src/main/webapp/index.html
+++ b/CupcakeWebshop/src/main/webapp/index.html
@@ -12,9 +12,13 @@
         <h1>Cookie Clickers Bake Webshop</h1>
         <h2>Plz login to order sweet, SWEET cupcakes.</h2>
         <form method="GET" action="http://localhost:8084/CupcakeWebshop/Login">
-        <input type ="text" name ="username">
-        <input type ="password" name ="password">
-        <input type="submit" value="Login">
+            <p>
+                Username:<br/>
+                <input type ="text" name ="username"><br/>
+                Password:<br/>
+                <input type ="password" name ="password"><br/>
+                <input type="submit" value="Login">
+            </p>
         </form>
     </body>
 </html>
