--- a/CupcakeWebshop/src/main/webapp/index.html
+++ b/CupcakeWebshop/src/main/webapp/index.html
@@ -11,7 +11,7 @@
     <body>
         <h1>Cookie Clickers Bake Webshop</h1>
         <h2>Plz login to order sweet, SWEET cupcakes.</h2>
-        <form method="GET" action="http://localhost:8084/CupcakeWebshop/Login">
+        <form method="POST" action="http://localhost:8084/CupcakeWebshop/Login">
             <p>
                 Username:<br/>
                 <input type ="text" name ="username"><br/>
